# program-ghildiyalsatwik

anchor_project/: .gitignore  Anchor.toml  Cargo.toml  package.json  tsconfig.json
anchor_project/programs/lvsol_transfer_hook/: Cargo.toml
anchor_project/programs/lvsol_transfer_hook/src/: lib.rs
anchor_project/programs/vault_manager/: Cargo.toml
anchor_project/programs/vault_manager/src/: lib.rs
anchor_project/programs/vault_manager/src/instructions/: add_sol.rs  initialize.rs  mod.rs  ping.rs  redeem.rs  trigger_inheritance.rs
anchor_project/programs/vault_manager/src/state/: vault_state.rs
anchor_project/tests/: vault_manager.ts
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  styles.css  types.d.ts
frontend/src/idl/: vault_manager.json
