[workspace]
members = [
  "programs/vault_manager",
  "programs/lvsol_transfer_hook"
]

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl  = "0.31.1"

resolver = "2"

[profile.release]
overflow-checks = true

[replace]
"solana-slot-hashes:3.0.0" = { path = "patches/solana-slot-hashes-v3" }
"solana-slot-hashes:2.2.1" = { path = "patches/solana-slot-hashes-v2" }
