[package]
name = "lvsol_transfer_hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl  = { version = "0.31.1", features = ["token_2022"] }

# Token-2022 and Transfer-Hook crates
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.8.1"

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = ["no-entrypoint"]