[package]
name = "vault_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl  = { version = "0.31.1", features = ["token_2022"] }

# --- SPL crates (current stable alignment) ---
spl-transfer-hook-interface = "0.8.1"
spl-token-2022              = { version = "10.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0.0",  features = ["no-entrypoint"] }

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]